--- a/AF-Lab-1/index.html
+++ b/AF-Lab-1/index.html
@@ -77,7 +77,7 @@
 
     // a. Declare a global variable named vehicleName in the window object.
 
-    var vehicleName = 'Toyota';
+    let vehicleName = 'Toyota';
 
     // b. Declare a method named printVehicleName to print out the vehicle name.
 
